# SkyPhysicsTest

./: CMakeLists.txt  CMakePresets.json  SkyPhysics.psc  mud.nif  skyphysics.yaml  vcpkg.json
.github/workflows/: main.yml
SkyCloth/: Cargo.toml  build.rs
SkyCloth/src/: lib.rs
src/: XSEPlugin.cpp
